--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.0.0",
+    "i18next": "^23.7.7",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.2",
     "isotope": "^1.0.0-alpha.3",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.20.0",
     "wowjs": "^1.1.3"
