--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "i18next": "^23.7.7",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
+    "i18next-localstorage-backend": "^4.2.0",
     "isotope": "^1.0.0-alpha.3",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
